make sure tiles are visually over all elements and does not go behind other elements

--- a/src/components/Puzzle/Puzzle.module.css
+++ b/src/components/Puzzle/Puzzle.module.css
@@ -35,3 +35,11 @@
 .textBoardCell {
   grid-column: span 4;
 }
+
+.overlayTile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  z-index: 999;
+}
